# soccer-player-tracking

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILTERING_GUIDE.md  Finetuning_yolo_model.ipynb  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  README.md  TRAINING_GUIDE.md  install_cuda_pytorch.md  main.py  pyproject.toml  setup.bat  setup.sh  setup_uv.py  train_model.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
model/: .gitkeep  README.md
scripts/: __init__.py  download_model.py  yolo_inference.py
src/soccer_tracker/: __init__.py
src/soccer_tracker/analysis/: __init__.py  player_ball_assigner.py  speed_and_distance_estimator.py  team_assigner.py  view_transformer.py
src/soccer_tracker/tracking/: __init__.py  camera_movement_estimator.py  tracker.py
src/soccer_tracker/utils/: __init__.py  bbox_utils.py  video_utils.py
